# CG2

./: Makefile  README.md
data/multiclass/: train_labels.txt
include/: usr2.h
src/: task2.cpp  usr2.cpp
src/1/src/: CMakeLists.txt  GoogleTests.cpp  Usable.cpp  Usable.h  classifier.h  matrix.hpp  task2.cpp  timer.h
